--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -103,14 +103,14 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
-        "sdxl_patch = True\n",
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
         "\n",
         "\n",
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
         "\n",
-        "patches_dir = \"/content/patches/\"\n",
+        "#sdxl_patch = True\n",
+        "patches_dir = \"/content/SDZ/patches/\"\n",
         "merge_in_vram = False\n",
         "load_in_vram = False\n",
         "ram_patch_for_sd2 = False\n",
@@ -165,7 +165,6 @@
         "print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
         "# Colab patches for quality of life improvements\n",
-        "os.makedirs(patches_dir, exist_ok=True)\n",
         "with capture.capture_output() as cap:\n",
         "\n",
         " # RAM Patch Code by ddPn08: https://github.com/ddPn08/automatic1111-colab/commit/81431d6bd66f0ef96fe638c2743623522e1bc797\n",
@@ -176,7 +175,6 @@
         "    !cd /content/SDZ/ && git apply --ignore-whitespace {patches_dir}/sd-lowram.patch\n",
         "  else:\n",
         "    !cd /content/SDZ/ && git apply --ignore-whitespace -R {patches_dir}/sd-lowram.patch\n",
-        "\n",
         "\n",
         "  if dpmpp_v2:\n",
         "    !cd /content/SDZ/ && git apply --ignore-whitespace {patches_dir}/DPMPP_2M_V2.patch\n",
@@ -194,8 +192,6 @@
         "\n",
         "  !rm -rf /content/sdw\n",
         "  !rm -rf /content/{patches_dir}\n",
-        "\n",
-        "\n",
         "\n",
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
         "\n",
@@ -215,6 +211,8 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
         "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')];\n",
         "\n",
+        "    os.makedirs(patches_dir, exist_ok=True)\n",
+        "\n",
         "    #clear_output()\n",
         "  #print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
@@ -229,6 +227,7 @@
         "  os.chdir(SDZ_webui_path)\n",
         "\n",
         "  !apt --fix-broken install\n",
+        "  !pip install fastapi==0.94.0 -qq\n",
         "  #!pip install openmim\n",
         "  #!pip install svglib\n",
         "  #!sudo apt-get install libcairo2-dev\n",
@@ -243,40 +242,40 @@
         "  if SDZ_Download_Model == \"V1.5\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.SPYBG_ToolKit5\":\n",
+        "  if SDZ_Download_Model == \"V1.5.SPYBG_ToolKit5\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/17292\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15SPYBG_ToolKit5.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.NeverEndingDream12\":\n",
+        "  if SDZ_Download_Model == \"V1.5.NeverEndingDream12\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/64094\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15NeverEndingDream12.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Dreamlike_Diffusion_1\":\n",
+        "  if SDZ_Download_Model == \"V1.5.Dreamlike_Diffusion_1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/1356\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Dreamlike_Diffusion_1.ckpt $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
+        "  if SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/15236\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Deliberate_2.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Reliberate_1\":\n",
+        "  if SDZ_Download_Model == \"V1.5.Reliberate_1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/XpucT/Reliberate/resolve/main/Reliberate.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Reliberate_1.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Photon_1\":\n",
+        "  if SDZ_Download_Model == \"V1.5.Photon_1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/90072\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Photon_1.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.ReVAnimated\":\n",
+        "  if SDZ_Download_Model == \"V1.5.ReVAnimated\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/46846\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15ReVAnimated.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
+        "  if SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/43888\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15DreamShaper.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.CyriousMix\":\n",
+        "  if SDZ_Download_Model == \"V1.5.CyriousMix\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/7951\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15CyriousMix.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
+        "  if SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/darkstorm2150/Protogen_x5.8_Official_Release/resolve/main/ProtoGen_X5.8-pruned-fp16.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Protogenx58.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.RealisticVision4\":\n",
+        "  if SDZ_Download_Model == \"V1.5.RealisticVision4\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/114367?type=Model&format=SafeTensor&size=pruned&fp=fp16\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o realisticVisionv40VAE.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"VXL1.0\":\n",
+        "  if SDZ_Download_Model == \"VXL1.0\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
         "\n",
@@ -323,7 +322,7 @@
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
-        "        !gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
+        "        #!gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
         "        #!gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
@@ -376,7 +375,7 @@
         "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
-        "        !gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
+        "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
         "\n",
         "    %cd ..\n",
         "\n",
@@ -444,9 +443,9 @@
         "    SDZ_Training == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
-        "  if sdxl_patch:\n",
-        "    !sed -i -e '''/from modules import launch_utils/a\\import os''' /content/SDZ/launch.py\n",
-        "    !sed -i -e '''/        prepare_environment()/a\\        os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/SDZ/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/SDZ/launch.py\n",
+        "  #if sdxl_patch:\n",
+        "    #!sed -i -e '''/from modules import launch_utils/a\\import os''' /content/SDZ/launch.py\n",
+        "    #!sed -i -e '''/        prepare_environment()/a\\        os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/SDZ/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/SDZ/launch.py\n",
         "\n",
         "  if SDZ_Big_Models:\n",
         "    #!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' $SDZ_webui_path'/modules/shared.py'\n",
