--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -110,7 +110,7 @@
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
         "\n",
         "#sdxl_patch = True\n",
-        "patches_dir = \"/content/SDZ/patches/\"\n",
+        "patches_dir = \"/content/sample_data/patches/\"\n",
         "merge_in_vram = False\n",
         "load_in_vram = False\n",
         "ram_patch_for_sd2 = False\n",
@@ -134,6 +134,10 @@
         "  if nnb().split('=')[1] != \"1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq\":\n",
         "    time.sleep(10)\n",
         "  # ------------------------------------ Feel free to remove! Don't forget to read notes above ✌️\n",
+        "\n",
+        "  %cd /content/sample_data\n",
+        "  os.makedirs(patches_dir, exist_ok=True)\n",
+        "  %cd ..\n",
         "\n",
         "  with capture.capture_output() as cap:\n",
         "\n",
@@ -210,8 +214,6 @@
         "    %cd SDZ\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
         "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')];\n",
-        "\n",
-        "    os.makedirs(patches_dir, exist_ok=True)\n",
         "\n",
         "    #clear_output()\n",
         "  #print('\u001b[1;96mInstalling SDZ ✓')\n",
