--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -378,6 +378,8 @@
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
         "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
+        "        !sed -i '1s/.*/version_flag = \"v0.0.2Z\"/' /content/SDZ/extensions/sd-webui-roop-uncensored-main/scripts/roop_version.py\n",
+        "\n",
         "\n",
         "    %cd ..\n",
         "\n",
