--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -134,12 +134,10 @@
         "  if nnb().split('=')[1] != \"1wEa-tS10h4LlDykd87TF5zzpXIIQoCmq\":\n",
         "    time.sleep(10)\n",
         "  # ------------------------------------ Feel free to remove! Don't forget to read notes above ✌️\n",
-        "\n",
-        "  %cd /content/sample_data\n",
-        "  os.makedirs(patches_dir, exist_ok=True)\n",
-        "  %cd ..\n",
-        "\n",
         "  with capture.capture_output() as cap:\n",
+        "    %cd /content/sample_data\n",
+        "    os.makedirs(patches_dir, exist_ok=True)\n",
+        "    %cd /content\n",
         "\n",
         "    !wget https://huggingface.co/NoCrypt/fast-repo/resolve/main/ubuntu_deps.zip ; unzip ubuntu_deps.zip -d ./deps ; dpkg -i ./deps/* ; rm -rf ubuntu_deps.zip /content/deps/\n",
         "\n",
@@ -324,10 +322,10 @@
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
+        "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
+        "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
         "        #!gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
-        "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
-        "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
         "        #!gdown https://acortar.link/7aJCkg -O agent-scheduler.zip && unzip -n agent-scheduler.zip && rm agent-scheduler.zip\n",
         "        #!gdown https://acortar.link/glUPMq -O canvas-editor.zip && unzip -n canvas-editor.zip && rm canvas-editor.zip\n",
