--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -242,40 +242,40 @@
         "  if SDZ_Download_Model == \"V1.5\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.SPYBG_ToolKit5\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.SPYBG_ToolKit5\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/17292\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15SPYBG_ToolKit5.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.NeverEndingDream12\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.NeverEndingDream12\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/64094\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15NeverEndingDream12.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.Dreamlike_Diffusion_1\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.Dreamlike_Diffusion_1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/1356\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Dreamlike_Diffusion_1.ckpt $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/15236\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Deliberate_2.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.Reliberate_1\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.Reliberate_1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/XpucT/Reliberate/resolve/main/Reliberate.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Reliberate_1.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.Photon_1\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.Photon_1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/90072\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Photon_1.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.ReVAnimated\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.ReVAnimated\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/46846\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15ReVAnimated.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/43888\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15DreamShaper.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.CyriousMix\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.CyriousMix\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/7951\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15CyriousMix.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/darkstorm2150/Protogen_x5.8_Official_Release/resolve/main/ProtoGen_X5.8-pruned-fp16.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Protogenx58.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5.RealisticVision4\":\n",
+        "  elif SDZ_Download_Model == \"V1.5.RealisticVision4\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/114367?type=Model&format=SafeTensor&size=pruned&fp=fp16\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o realisticVisionv40VAE.safetensors $url)\n",
         "\n",
-        "  if SDZ_Download_Model == \"VXL1.0\":\n",
+        "  elif SDZ_Download_Model == \"VXL1.0\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
         "\n",
