--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -45,7 +45,6 @@
       "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/ddPn08/kohya-sd-scripts-webui\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
-        "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
         "import shutil\n",
@@ -110,7 +109,7 @@
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
         "\n",
         "#sdxl_patch = True\n",
-        "patches_dir = \"/content/sample_data/patches/\"\n",
+        "patches_dir = \"/content/patches/\"\n",
         "merge_in_vram = False\n",
         "load_in_vram = False\n",
         "ram_patch_for_sd2 = False\n",
@@ -135,10 +134,7 @@
         "    time.sleep(10)\n",
         "  # ------------------------------------ Feel free to remove! Don't forget to read notes above ✌️\n",
         "  with capture.capture_output() as cap:\n",
-        "    %cd /content/sample_data\n",
         "    os.makedirs(patches_dir, exist_ok=True)\n",
-        "    %cd /content\n",
-        "\n",
         "    !wget https://huggingface.co/NoCrypt/fast-repo/resolve/main/ubuntu_deps.zip ; unzip ubuntu_deps.zip -d ./deps ; dpkg -i ./deps/* ; rm -rf ubuntu_deps.zip /content/deps/\n",
         "\n",
         "    !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
@@ -276,8 +272,8 @@
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/114367?type=Model&format=SafeTensor&size=pruned&fp=fp16\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o realisticVisionv40VAE.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"VXL1.0\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/stabilityai/stable-diffusion-xl-refiner-1.0/resolve/main/sd_xl_refiner_1.0_0.9vae.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/WNCawM\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/mt4XSp\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
@@ -316,7 +312,7 @@
         "    if not os.path.exists('batchlinks-webui-main'):\n",
         "        !gdown https://acortar.link/5GXaEX -O batchlinks.zip && unzip -n batchlinks.zip && rm batchlinks.zip\n",
         "        !gdown https://acortar.link/6QJzqw -O ultimate_upscale.zip && unzip -n ultimate_upscale.zip && rm ultimate_upscale.zip\n",
-        "        !gdown https://acortar.link/Y9tabV -O civitai-browser.zip && unzip -n civitai-browser.zip && rm civitai-browser.zip\n",
+        "        #!gdown https://acortar.link/Y9tabV -O civitai-browser.zip && unzip -n civitai-browser.zip && rm civitai-browser.zip\n",
         "        !gdown https://acortar.link/rPmvQq -O tagcomplete.zip && unzip -n tagcomplete.zip && rm tagcomplete.zip\n",
         "        !gdown https://acortar.link/OokkEf -O images-browser.zip && unzip -n images-browser.zip && rm images-browser.zip\n",
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
@@ -376,8 +372,6 @@
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
         "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
-        "        !sed -i '1s/.*/version_flag = \"v0.0.2Z\"/' /content/SDZ/extensions/sd-webui-roop-uncensored-main/scripts/roop_version.py\n",
-        "\n",
         "\n",
         "    %cd ..\n",
         "\n",
@@ -445,24 +439,11 @@
         "    SDZ_Training == \"\"\n",
         "    os.chdir(SDZ_webui_path)\n",
         "\n",
-        "  #if sdxl_patch:\n",
-        "    #!sed -i -e '''/from modules import launch_utils/a\\import os''' /content/SDZ/launch.py\n",
-        "    #!sed -i -e '''/        prepare_environment()/a\\        os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/SDZ/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/SDZ/launch.py\n",
-        "\n",
         "  if SDZ_Big_Models:\n",
-        "    #!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' $SDZ_webui_path'/modules/shared.py'\n",
-        "    #!sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda'@\" $SDZ_webui_path'/modules/sd_models.py'\n",
+        "\n",
         "    !sed -i 's@ui.create_ui().*@ui.create_ui();shared.demo.queue(concurrency_count=999999,status_update_rate=0.1)@' $SDZ_webui_path'/webui.py'\n",
         "    !sed -i \"s@map_location='cpu'@map_location='cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
-        "    #!sed -i '902s@.*@        self.logvar = self.logvar.to(self.device)@' $SDZ_webui_path'/repositories/stable-diffusion-stability-ai/ldm/models/diffusion/ddpm.py'\n",
-        "    #!sed -i \"s@os.path.splitext(checkpoint_file)@os.path.splitext(checkpoint_file); map_location='cuda' if os.path.getsize(checkpoint_file) > 5500000000 else map_location@\" $SDZ_webui_path'/modules/sd_models.py'\n",
-        "    #!sed -i \"s@'cpu'@'cuda'@\" $SDZ_webui_path'/modules/extras.py'\n",
         "    !sed -i \"s/                    print(strings.en\\[\\\"SHARE_LINK_MESSAGE\\\"\\])/                    print('\u001b[1;90m')/\" '/usr/local/lib/python3.9/dist-packages/gradio/blocks.py'\n",
-        "\n",
-        "    # VXL1.0\n",
-        "    #!sed -i -e '''/from modules import launch_utils/a\\import os''' $SDZ_webui_path'/launchy.py'\n",
-        "    #!sed -i -e '''/        prepare_environment()/a\\        os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/ui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' $SDZ_webui_path'/launchy.py'\n",
-        "    #!sed -i -e 's/\\[\"sd_model_checkpoint\"\\]/\\[\"sd_model_checkpoint\",\"sd_vae\",\"CLIP_stop_at_last_layers\"\\]/g' $SDZ_webui_path'/modules/shared.py'\n",
         "\n",
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
